--- a/reset.css
+++ b/reset.css
@@ -1,8 +1,3 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
 html,
 body,
 div,
@@ -10,15 +5,6 @@ span,
 applet,
 object,
 iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
 a,
 abbr,
 acronym,
@@ -29,6 +15,7 @@ code,
 del,
 dfn,
 em,
+font,
 img,
 ins,
 kbd,
@@ -42,20 +29,27 @@ sub,
 sup,
 tt,
 var,
-b,
-u,
-i,
-center,
 dl,
 dt,
 dd,
 ol,
 ul,
 li,
-fieldset,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+pre,
 form,
+fieldset,
+input,
+textarea,
 label,
 legend,
+p,
+blockquote,
 table,
 caption,
 tbody,
@@ -63,67 +57,75 @@ tfoot,
 thead,
 tr,
 th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
+td {
   margin: 0;
   padding: 0;
   border: 0;
+  outline: 0;
+  font-weight: inherit;
+  font-style: inherit;
   font-size: 100%;
-  font: inherit;
+  font-family: inherit;
   vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
 }
 body {
   line-height: 1;
+  color: black;
+  background: white;
+}
+:focus {
+  outline: 0;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+caption,
+th,
+td {
+  text-align: left;
+  font-weight: normal;
+}
+fieldset,
+img {
+  border: 0;
+}
+address,
+caption,
+cite,
+code,
+dfn,
+em,
+strong,
+th,
+var {
+  font-style: normal;
+  font-weight: normal;
 }
 ol,
 ul {
   list-style: none;
 }
-blockquote,
-q {
-  quotes: none;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: 100%;
+  font-weight: normal;
 }
 blockquote:before,
 blockquote:after,
 q:before,
 q:after {
   content: "";
-  content: none;
 }
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
+blockquote,
+q {
+  quotes: "" "";
+}
+abbr,
+acronym {
+  border: 0;
 }
