--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 :root {
+  /* Fonte e cores */
   --font-family: "Montserrat", sans-serif;
+  --background-dark: #282523;
   --color-dark: #4b4b4b;
   --color-gold: #b58034;
   --color-black: black;
@@ -7,9 +9,14 @@
   --color-gradient-start: #946223;
   --color-gradient-middle: #b48538;
   --color-gradient-end: #cfa34a;
+
+  /* Espaçamentos */
+  --gap-extralarge: 78px;
   --gap-large: 60px;
   --gap-medium: 35px;
   --gap-small: 20px;
+
+  /* Tamanhos de fonte */
   --font-size-h2: 34px;
   --font-size-p: 20px;
   --font-size-span: 15px;
@@ -22,6 +29,14 @@ html,
 input {
   font-family: var(--font-family);
   border: none;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  overflow-x: hidden;
 }
 
 main,
@@ -50,14 +65,22 @@ span {
 #carousel-section {
   display: grid;
   gap: var(--gap-small);
-  margin: var(--gap-large) 24px 0;
+  padding: var(--gap-extralarge) 24px;
+
+  background-color: var(--background-dark);
+  background-image: url(assets/versatil.svg);
+  background-position: calc(-200px) center;
+  background-repeat: no-repeat;
 
   h2 {
     font-size: var(--font-size-h2);
-    line-height: 35px;
+    line-height: 40px;
+    color: var(--color-white);
+    font-weight: 300;
 
     span {
       font-weight: bold;
+      color: var(--color-white);
     }
   }
 
@@ -65,7 +88,9 @@ span {
     font-size: var(--font-size-p);
     letter-spacing: -0.48px;
     line-height: 25px;
-    width: 70%;
+    width: 50%;
+    color: var(--color-white);
+    font-weight: 300;
   }
 
   article {
@@ -130,7 +155,18 @@ span {
 }
 
 /* Beach Section */
+#detail {
+  display: none;
+  position: absolute;
+  z-index: 1;
+  width: 348px;
+  height: auto;
+  right: calc(330px);
+  /* Posição relativa ao beach-section */
+}
+
 #beach-section {
+  position: relative;
   width: 100%;
   height: 1055px;
   background: linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0) 70%),
@@ -158,7 +194,7 @@ span {
     h2 {
       width: 100%;
       font-size: var(--font-size-beach-h2);
-      line-height: 35px;
+      line-height: 40px;
 
       span {
         font-weight: bold;
@@ -231,6 +267,7 @@ span {
   }
 
   #carousel-section {
+    position: relative;
     width: 100%;
     justify-content: center;
 
@@ -260,8 +297,12 @@ span {
     }
   }
 
+  #detail {
+    display: block;
+  }
+
   #beach-section {
-    background-image: url("./assets/beach.png");
+    background-image: url("./assets/beach-1.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -277,7 +318,9 @@ span {
       width: 546px;
       height: min-content;
 
-      margin-left: 10px;
+      align-self: center;
+      margin-left: 35px;
+      margin-top: 0;
 
       h2 {
         width: 434px;
@@ -323,6 +366,7 @@ span {
         span {
           font-size: 20px;
         }
+
         h2 {
           font-size: 50px;
         }
